# apt-ng

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  quick-install
completions/: README.md  install.sh
docs/: FUNCTIONS-LIST.md  GIT-AUTH.md  INSTRUCTION.md  PLANNED.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_apx_parser.rs  fuzz_dependency_parser.rs  fuzz_packages_parser.rs
scripts/: git-push.sh  setup-git-auth.sh
src/: apt_parser.rs  cache.rs  cli.rs  config.rs  downloader.rs  index.rs  installer.rs  lib.rs  main.rs  output.rs  package.rs  repo.rs  sandbox.rs  self_update.rs  solver.rs  system.rs  verifier.rs
src/apx_builder/: builder.rs  mod.rs  signer.rs
src/benchmark/: metrics.rs  mod.rs  output.rs
src/delta/: applier.rs  calculator.rs  format.rs  mod.rs
src/repo_generator/: index.rs  mod.rs  signature.rs
src/repo_server/: mod.rs  server.rs
src/security/: audit.rs  checks.rs  mod.rs  report.rs
tests/integration/: cli_tests.rs  helpers.rs  mod.rs  repo_tests.rs  test_server.rs
