[package]
name = "apt-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "color", "help"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "cookies", "rustls-tls"] }
rusqlite = { version = "0.29", features = ["bundled"] }
zstd = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.7"
thiserror = "1"
futures = "0.3"
toml = "0.8"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
colored = "2"
indicatif = "0.17"
xz2 = "0.1"
clap_complete = "4.5"
comfy-table = "7"
atty = "0.2"
term_size = "0.3"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-test = "0.4"
sysinfo = "0.30"

[[bin]]
name = "apt-ng-benchmark"
path = "src/bin/apt-ng-benchmark.rs"

